# trading-bot-swarm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  PR4_UPDATE_PROPOSAL.md  PR_4_UPDATES.md  QUICKSTART.md  README.md  README_PR4_UPDATE.md  TASK_SUMMARY.md  docker-compose.staging.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  update_pr4.sh
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  dependency-updates.yml  docker.yml  docs.yml  markdown-link-check-config.json  spellcheck-config.yml  staging-deploy.yml  wordlist.txt
config/: .env.development  .env.staging  .env.template  config.yaml  gunicorn.conf.py  production.yaml
docs/: CI_CD.md  ENVIRONMENTS.md  PRODUCTION_DEPLOYMENT_RUNBOOK.md
monitoring/: prometheus.yml
nginx/: staging.conf
scripts/: deploy-staging.sh  setup-dev.sh
src/bots/: __init__.py  trend_bot.py
src/core/: __init__.py  base_bot.py  bot_state.py  config_manager.py  market_data.py  portfolio.py  risk_manager.py  strategy_interface.py  trading_engine.py
src/strategies/: __init__.py  base_strategy.py  mean_reversion.py  momentum.py  noice_strategy.py  trend_following.py
src/utils/: __init__.py  database.py  logger.py
tests/: conftest.py  test_environment.py
